recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:5: error: not found: value rep
rep = l(0)::l(l.length-2)
^butLast:7: error: not found: value rep
return rep
       ^