recursion.cons.lessons.recursion.cons.ButLast.scala.code
def butLast(l:List[Int]): List[Int] = {



rep = l(0)::l(l.length-2)

return rep
	
}
